--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/react": "^18.0.34",
+    "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "autoprefixer": "^10.4.14",
