--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack serve -c scripts/webpack.dev.js",
     "build": "yarn ts:checker && cross-env NODE_ENV=production webpack -c scripts/webpack.prod.js",
+    "build:dev": "cross-env NODE_ENV=development webpack -c scripts/webpack.dev.js",
     "ts:checker": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx"
   },
@@ -64,6 +65,8 @@
     "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
     "husky": "3.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "lint-staged": "^13.2.1",
     "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.21",
