--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,9 @@
     "rules": {
         "semi": "warn",
         "quotes": [1, "single"],
-        "object-curly-spacing": ["error","always"],
+        "jsx-quotes": ["error", "prefer-double"],
+        "object-curly-spacing": ["error", "always"],
+        "indent": ["error", 4],
         "react/react-in-jsx-scope": "off", // 对react 17以上版本，不需要在JSX文件中强制引入React
         "react/jsx-uses-react": "off" // // 对react 17以上版本，不需要在JSX文件中强制引入React
     }
